[package]
name = "tasker"
version = "0.1.0"
authors = ["Caleb Webber <seeplusplus@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4",  features = ["serde"]  }
serde_json =  "1.0.56"
serde = {version = "*", features = ["derive"]}